--- a/src/pages/main/homePage/HomePage.scss
+++ b/src/pages/main/homePage/HomePage.scss
@@ -318,6 +318,26 @@
         }
     }
 
+    &.sliderview{
+        background: #ffffff;
+        @apply dark:bg-dark-750;
+        border-radius: 5px;
+        box-shadow: 0 2px 10px -3px rgb(38 38 39 / 25%);
+        min-height: 300px;
+        .img-root{
+            width: 90px;
+            height: 90px;
+            margin: auto;
+            img{
+                display: flex;
+                object-fit: contain;
+                //height: 100%;
+                object-position: top;
+                //width: 100%;
+            }
+        }
+    }
+
     .fav-icon{
         width: 26px;
         height: 26px;
