--- a/client/src/components/UI/Loader/loader.scss
+++ b/client/src/components/UI/Loader/loader.scss
@@ -1,74 +1,52 @@
-
 .loading {
+	$colors: #7ef9ff, #89cff0, #4682b4, #0f52ba, #000080;
+	display: flex;
+	justify-content: center;
 
-    span {
-        display: inline-block;
-        vertical-align: middle;
-        width: 1.5em;
-        height: 1.5em;
-        margin: .19em;
-        background: #81ff81;
-        border-radius: 1em;
-        animation: loading 1s infinite alternate;
-        &:nth-of-type(2) {
-            background: #71e371;
-            animation-delay: 0.2s;
-        }
+	.dot {
+		position: relative;
+		width: 1.6em;
+		height: 1.6em;
+		margin: 0.5em;
+		border-radius: 50%;
 
-        &:nth-of-type(3) {
-            background: #63dc63;
-            animation-delay: 0.4s;
-        }
+		&::before {
+			position: absolute;
+			content: "";
+			width: 100%;
+			height: 100%;
+			background: inherit;
+			border-radius: inherit;
+			animation: wave 2s ease-out infinite;
+		}
 
-        &:nth-of-type(4) {
-            background: #54d254;
-            animation-delay: 0.6s;
-        }
+		@for $i from 1 through 5 {
+			&:nth-child(#{$i}) {
+				background: nth($colors, $i);
 
-        &:nth-of-type(5) {
-            background: #43c243;
-            animation-delay: 0.8s;
-        }
-
-        &:nth-of-type(6) {
-            background: #069306;
-            animation-delay: 1.0s;
-        }
-
-        &:nth-of-type(7) {
-            background: #038503;
-            animation-delay: 1.2s;
-        }
-    }
-
-    &.small {
-        span {
-            display: inline-block;
-            vertical-align: middle;
-            width: 1em;
-            height: 1em;
-            margin: .19em;
-            border-radius: .5em;
-        }
-    }
-
-
+				&::before {
+					animation-delay: $i * 0.2s;
+				}
+			}
+		}
+	}
 }
 
-.loader-root .loading-title {
-    font-size: 16px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 500;
-    text-align: center;
-    padding: 10px !important;
-    margin: 10px !important;
+@keyframes wave {
+	50%,
+	75% {
+		transform: scale(2.5);
+	}
+
+	80%,
+	100% {
+		opacity: 0;
+	}
 }
 
-@keyframes loading {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+.center-loader{
+	position: fixed;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
